# xapi-oxidized

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml  test.yml
helpers/: gen_models.py  gen_siteconfig.py
src/: lib.rs  main.rs  session.rs
src/core/: error.rs  mod.rs  resource.rs  session.rs  status.rs
src/xapi/: broker.rs  mod.rs  status.rs
xnat/: Cargo.toml  README.md  example.env
xnat/src/: lib.rs  versions.rs
xnat/src/client/: builder.rs  clients.rs  error.rs  mod.rs  timeouts.rs
xnat/tests/: client_test.rs  models_test.rs  protocols_test.rs  uribuilder_test.rs
xnat/tests/common/: mod.rs
xnat_core/: Cargo.toml  README.md
xnat_core/src/: lib.rs  uri.rs  uri_admin.rs  uri_sys.rs  version.rs
xnat_core/src/client/: builder.rs  clients.rs  error.rs  mod.rs  timeouts.rs
xnat_core/src/models/: automation.rs  buildinfo.rs  common.rs  mod.rs  notifications.rs  siteconfig.rs
xnat_core/src/models/admin/: automation.rs  buildinfo.rs  config.rs  dicomscp.rs  mod.rs  notifications.rs  plugin.rs  prefs.rs  siteconfig.rs
xnat_core/src/models/data/: assessor.rs  experiment.rs  mod.rs  pipeline.rs  project.rs  resource.rs  scan.rs  subject.rs
xnat_core/src/protocols/: create.rs  crud.rs  delete.rs  mod.rs  retrieve.rs
xnat_core/src/uri/: admin.rs  auth.rs  builder.rs  events.rs  mod.rs  plugins.rs  system.rs  users.rs
xnat_core/src/uri/admin/: admin.rs  administration.rs  auth.rs  dicom.rs  events.rs  mod.rs  plugins.rs  services.rs  system.rs  users.rs
xnat_core/src/uri/data/: archive.rs  experiments.rs  mod.rs  projects.rs  resources.rs  shared.rs  subjects.rs
xnat_derive/: Cargo.toml  README.md
xnat_derive/src/: lib.rs  model.rs  uri.rs  version.rs
xnat_derive/src/uri/: mod.rs  uribuilder.rs
