[package]
name = "oxinat"
description = "XNAT REST API client"
license = "BSD-3-Clause"
repository = "https://github.com/WilkinsonK/xapi-oxidized"
version = "0.6.3"
edition = "2021"

[lib]
name = "oxinat"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
full = ["core", "derive"]
core = []
derive = []

[dependencies]
oxinat_core = { path = "../xnat_core", version = "0.9.1" }
oxinat_derive = { path = "../xnat_derive", version = "0.7.2" }

[dev-dependencies]
dotenv = "0.15.0"
tokio = "1.38.0"
