[package]
name = "oxinat_core"
description = "oxinat xapi-oxidized core library"
license = "BSD-3-Clause"
repository = "https://github.com/WilkinsonK/xapi-oxidized"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxinat_core"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.83"
oxinat_derive = { path = "../xnat_derive", version = "0.6.1" }
thiserror = "1.0.60"
