[package]
name = "oxinat_core"
description = "oxinat xapi-oxidized core library"
license = "BSD-3-Clause"
repository = "https://github.com/WilkinsonK/xapi-oxidized"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxinat_core"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.21"
oxinat_derive = { path = "../xnat_derive", version = "0.8.0" }
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.38.0", features = ["full"] }
