[package]
name = "oxinat_derive"
description = "oxinat xapi-oxidized procedural macros"
license = "BSD-3-Clause"
repository = "https://github.com/WilkinsonK/xapi-oxidized"
version = "0.7.2"
edition = "2021"

[lib]
name = "oxinat_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
anyhow = "1.0.86"
attribute-derive = { version = "0.9.1", features = ["syn-full"] }
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full", "extra-traits"] }
thiserror = "1.0.60"
